reset message input

--- a/public/home-page.html
+++ b/public/home-page.html
@@ -364,6 +364,7 @@
                 data.forEach(friend => {
                     if(friend.name === currentFriendname) {
                         friend.massagesRecived.push(text)
+                        messageInput.value = '';
                         return
                     }
                 })
