--- a/public/home-page.html
+++ b/public/home-page.html
@@ -198,9 +198,13 @@
             border-radius: 50px;
             word-wrap: break-word;
             line-height: 1.4;
-            width: 10%;
+            max-width: 50%; 
+            min-width: 1%;
+            width: fit-content;
             background-color: #bac8eb;
             margin-left: auto;
+            margin-top: 5px;
+            margin-bottom: 5px;
         }
          .my-message-div{
             border-top-left-radius: 10;
@@ -219,8 +223,11 @@
         }
         .rm{
             color: rgb(85, 85, 85);
-            margin-left: auto;
             padding-left: 5px;
+        }
+        .sm{
+            color: rgb(85, 85, 85);
+            padding-right: 5px;
         }
     </style>
 </head>
@@ -366,7 +373,9 @@
                 else{
                     messageElement.innerHTML = `
                     <div class="friend-message-div">
+                        <div class="sm">
                         ${msg.massage}
+                        </div>
                     </div>
                      `;
                 }
