--- a/public/home-page.html
+++ b/public/home-page.html
@@ -193,11 +193,15 @@
         }
         .friend-message-div{
             color: black;
-            background-color: rgb(100,100,250);
+            background-color: rgb(100, 207, 250);
+            width: 100;
+            align-items: first baseline;
         }
          .my-message-div{
             color: black;
-            background-color: rgb(100, 250, 162);
+            background-color: rgb(100, 250, 152);
+            width: 100;
+            align-items: end;
         }
     </style>
 </head>
